--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Bounce - Social Media App</title>
+        <link rel="icon" href="./src/shared/assets/logo.png" />
+        <title>Bounce</title>
     </head>
     <body>
         <div id="app"></div>
